@@ -98,7 +98,7 @@ END {
 
 /^exif:ExposureTime=([0-9]+\/?[0-9]*)/ {
 	split( \\$2, ex_info, "/" );
-  exposure = ex_info[1] / ex_info[2];
+  exposure = ex_info[2] / ex_info[1];
 }
 
 /^exif:FNumber=([0-9]+\/?[0-9]*)/ {
