@@ -226,7 +226,8 @@ int robertson02_getResponse( pfs::Array2D       *xj,
   const float        *weights, 
   int M )
 {
-  // number of exposures
+
+// number of exposures
   int N = imgs.size();
     
   // frame size
@@ -248,12 +249,14 @@ int robertson02_getResponse( pfs::Array2D       *xj,
   }
 
   // 0. Initialization
-
+  
   normalize_rcurve( rcurve, M );
-
-  for( m = 0 ; m < M ; m++ )
+  
+  for( m = 0 ; m < M ; m++ ) {
+    //  cerr << "m = " << m << " rc = " << rcurve [ m ] << endl;    
     rcurve_prev [ m ] = rcurve [ m ];
-
+  }
+  
   robertson02_applyResponse( xj, imgs, rcurve, weights, M );
 
   // Optimization process
@@ -273,7 +276,12 @@ int robertson02_getResponse( pfs::Array2D       *xj,
 
   while( !converged )
   {
-  
+
+    // Display response curve - for debugging purposes
+/*    for( m = 0 ; m < M ; m+=32 ) {
+      cerr << "m = " << m << " rc = " << rcurve [ m ] << endl;
+      }*/
+    
     // 1. Minimize with respect to rcurve
     for( m = 0 ; m < M ; m++ )
     {
@@ -312,11 +320,11 @@ int robertson02_getResponse( pfs::Array2D       *xj,
     }
 
     // 2. Normalize rcurve
-    float middle_response = normalize_rcurve( rcurve, M );
-
+    float middle_response = normalize_rcurve( rcurve, M );    
+    
     // 3. Apply new response
     saturated_pixels = robertson02_applyResponse( xj, imgs, rcurve, weights, M );
-
+    
     // 4. Check stopping condition
     float delta = 0.0f;
     int   hits  = 0;
@@ -381,6 +389,7 @@ float normalize_rcurve( float* rcurve, int M )
   float rcurve_filt [ M ];
   float to_sort [ 2 * FILTER_SIZE + 1 ];
 
+  mean = 0.f;
   for ( int i = 0; i < M; i++ )
   {
     mean += rcurve [ i ];
@@ -425,8 +434,9 @@ float normalize_rcurve( float* rcurve, int M )
 }
 
 
-float normalize_rcurve_old( float* rcurve, int M )
+/*float normalize_rcurve_old( float* rcurve, int M )
 {
+
   int Mmin, Mmax;
   // find min max
   for( Mmin=0 ; Mmin<M && rcurve[Mmin]==0 ; Mmin++ );
@@ -450,6 +460,6 @@ float normalize_rcurve_old( float* rcurve, int M )
   if( mid!=0.0f )
     for( int m=0 ; m<M ; m++ )
       rcurve[m] /= mid;
-  return mid;
+      return mid;
 }
-
+*/
