@@ -3,6 +3,7 @@ pfstools 2.0.3 <?>
 	* fixed: Out-of-source compilation issues in octave (thanks to Tomas)
 	* added: pfsoutexr has new --float32 option to store color as 32-bit float
 	* upated: pfsoutexr assumes --fix-halfmax as default and has additional switch --clamp-halfmax to disable this behavior
+	* fixed: pfshdrcalibrate: serious bug that caused Robertson's method to fail most of the time
 	* fixed: pfshdrcalibrate: Improved clipping of saturated pixels should avoid most of the artefacts
 	* added: jpeg2hdrgen - now the command can use identify from ImageMagick instead of jhead
 
